<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/cajas"
    tools:context=".Onboarding.FaceDetectionFragment">

    <ImageView
        android:id="@+id/imgAwards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        android:src="@drawable/o"
        />

    <TextView
        android:id="@+id/textTitle2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="estudiante:Sarai Alvarez"
        android:textColor="@color/negro"
        android:textSize="27sp"
        android:fontFamily="@font/aclonica"/>

    <TextView
        android:id="@+id/textDesc2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/desc2"
        android:textSize="18sp"
        android:textColor="@color/negro"
        android:gravity="center"
        android:fontFamily="@font/aclonica"/>
    <TextView
        android:id="@+id/textDesc5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/desc5"
        android:textSize="18sp"
        android:textColor="@color/negro"
        android:gravity="center"
        android:fontFamily="@font/aclonica"/>
    <LinearLayout
        android:id="@+id/layoutNext"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textPrevTextD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="bottom|start"
            android:layout_weight="1"
            android:text="@string/back"
            android:textColor="@color/negro"
            android:textSize="20sp"
            android:fontFamily="@font/baumans"
            android:clickable="true"
            android:focusable="true"/>

        <TextView
            android:id="@+id/textNextTextD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="bottom|end"
            android:layout_weight="1"
            android:text="@string/next"
            android:textColor="@color/negro"
            android:textSize="20sp"
            android:fontFamily="@font/baumans"
            android:clickable="true"
            android:focusable="true"/>
    </LinearLayout>

</LinearLayout>