<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Onboarding.WelcomeFragment"
    android:orientation="vertical"
    android:background="@drawable/cajas">

    <ImageView
        android:id="@+id/imgWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:src="@drawable/cas" />

    <TextView
        android:id="@+id/textTitle1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/aclonica"
        android:gravity="center"
        android:text="@string/title1"
        android:textColor="@color/negro"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/textDesc1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/aclonica"
        android:gravity="center"
        android:text="@string/desc1"
        android:textColor="@color/negro"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/layoutNext"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textNextWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:fontFamily="@font/baumans"
            android:gravity="bottom|end"
            android:text="@string/next"
            android:textColor="@color/negro"
            android:textSize="20sp"

            android:clickable="true"
            android:focusable="true"
            />


    </LinearLayout>

</LinearLayout>